--- a/my_hotel_website/css/style.css
+++ b/my_hotel_website/css/style.css
@@ -83,6 +83,7 @@ p {
 
 .l-heading {
     font-size: 40px;
+    line-height: 1.2;
 }
 
 .btn:hover {
@@ -120,7 +121,7 @@ p {
 
 }
 
-#navbar h1 {
+#navbar .logo {
     float: left;
     padding-top: 20px;
 }
@@ -170,7 +171,7 @@ p {
 
 /* Home-Info */
 #home-info {
-    height: 400px;
+    height: 450px;
 }
 
 #home-info .info-img {
@@ -238,7 +239,7 @@ p {
 }
 
 #testimonials {
-    height: 600px;
+    height: 100%;
     background: url('../img/test-bg.jpg') no-repeat center center/cover;
     padding-top: 100px;
 
