--- a/newsgrid-site/css/style.css
+++ b/newsgrid-site/css/style.css
@@ -24,6 +24,10 @@ body {
     background: var(--light-color);
 }
 
+p {
+    margin: .5rem 0;
+}
+
 a {
     color: #333;
     text-decoration: none;
@@ -169,6 +173,32 @@ h6 {
     padding: 3rem;
 }
 
+.l-heading {
+    font-size: 3rem;
+}
+
+.list li {
+    padding: .5rem 0;
+    border-bottom: #555 dotted 1px;
+    width: 90%;
+}
+
+.list li a:hover {
+    color: var(--primary-color) !important;
+}
+
+/* Inner Page Container */
+.page-container {
+    display: grid;
+    grid-template-columns: 5fr 2fr;
+    margin: 2rem 0;
+    grid-gap: 1.5rem;
+}
+
+.page-container>*:first-child {
+    grid-row: 1 / span 3;
+}
+
 /* Navigation */
 
 #main-nav {
@@ -272,4 +302,54 @@ h6 {
 
 #home-articles .articles-container>*:last-child {
     grid-column: 2 / span 2;
+}
+
+#article .meta {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #eee;
+    padding: 0.5rem;
+}
+
+#article .meta .category {
+    margin-top: 0.4rem;
+}
+
+/* Footer */
+#main-footer {
+    background: var(--dark-color);
+    color: #fff;
+}
+
+#main-footer img {
+    width: 150px;
+}
+
+#main-footer a {
+    color: #fff;
+}
+
+#main-footer .footer-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 1.5rem;
+}
+
+#main-footer .footer-container>*:last-child {
+    background: #444;
+    grid-column: 1 / span 4;
+    padding: .5rem;
+    text-align: center;
+    font-size: 0.75rem;
+}
+
+#main-footer .footer-container input[type='email'] {
+    width: 90%;
+    padding: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
+#main-footer .footer-container input[type='submit'] {
+    width: 90%;
 }
